--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "postcss": "^8.5.6",
